@@ -33,9 +33,10 @@ public class RequestThreadPoolExecutor extends AbstractEventExecutor
     private final static int MAX_QUEUED_REQUESTS = 128;
     private final static String THREAD_FACTORY_ID = "Native-Transport-Requests";
     private final LocalAwareExecutorService wrapped = SHARED.newExecutor(DatabaseDescriptor.getNativeTransportMaxThreads(),
-                                                                           MAX_QUEUED_REQUESTS,
-                                                                           "transport",
-                                                                           THREAD_FACTORY_ID);
+                                                                         MAX_QUEUED_REQUESTS,
+                                                                         "transport",
+                                                                         THREAD_FACTORY_ID,
+                                                                         true);
 
     public boolean isShuttingDown()
     {
